[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Loot/Weapons/blade.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Equipment/Blade.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 18.2015

[node name="Blade" type="Area2D"]
script = ExtResource( 2 )

[node name="SwordSprite" type="Sprite" parent="."]
position = Vector2( 11, 0 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="AttackCollision" type="CollisionShape2D" parent="."]
position = Vector2( 11, 0 )
shape = SubResource( 1 )
disabled = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
